--- a/cenfotec_proyecto_1-Inicio/src/views/Emprendimientos/Emprendimientos.ejs
+++ b/cenfotec_proyecto_1-Inicio/src/views/Emprendimientos/Emprendimientos.ejs
@@ -142,9 +142,8 @@
                     </div>
 
                     <div class="products">
-                        <h3 class="products_title">Productos</h3>
+                        <h3 class="products_title">Imagen del negocio</h3>
                         <img src="/img/<%= emp.imagenNegocio %>" alt="Imagen negocio" class="product_img">
-                        <button class="view-products">Ver productos</button>
                     </div>
 
                     <div class="carrusel">
@@ -156,8 +155,6 @@
                         <button class="anterior"><i class='bx bx-arrow-left-stroke'></i></button>
                         <button class="siguiente"><i class='bx bx-arrow-right'></i></button>
                     </div>
-
-                    <button class="visualize" data-id="<%= emp._id %>">Visualizar</button>
                 </div>
                 <% }) %>
         </section>
